--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: #1a1a1a;
+}
 
 /* Google Fonts */
 /* font-family: "Nunito", sans-serif; */
